    - add kubuntu-netbook to known metapackages
    - remove usplash artwork from KeyDependencies
  * DistUpgrade/DistUpgradeController.py:
    - test for server mode again after the sources.list rewrite,
      to capture the case when the initial sources.list is empty
  * DistUpgrade/DistUpgradeCache.py:
    - when showing the demoted packages, skip packages that
      are automatic installed

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 28 Jan 2010 17:34:37 +0100

update-manager (1:0.131.4) lucid; urgency=low

  * update-manager-support-status:
    - text mode tool that gives a overview on the support
      status of the packages
  * DistUpgrade/DistUpgrade.ui, DistUpgrade/window_main.ui:
    - fix version number (thanks to davmor2)
  * DistUpgrade/DistUpgrade.cfg.hardy:
    - fix upgrade target to lucid (LP: #512608)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 27 Jan 2010 12:00:53 +0100

update-manager (1:0.131.3) lucid; urgency=low

  * DistUpgrade/DistUpgradeController.py:
    - add missing check for ubuntu-security when testing for
      mirrors (thanks to Stuart Langridge)
  * DistUpgrade/DistUpgrade.cfg:
    - add example SlideshowUrl
  * DistUpgrade/DistUpgradeController.py, DistUpgrade/DistUpgradeView.py,
    DistUpgrade/DistUpgradeViewGtk.py:
    - add slideshow support based on webkit
    - call percent() JS method on the webkit view
  * check-new-release:
    - use exit codes if run with --quiet otherwise only print
      (LP: #494499)
  * DistUpgrade/DistUpgradeConfigParser.py:
    - fix crash in _interpolate (LP: #500705)
  * UpdateManager/Core/MetaRelease.py:
    - do not crash on stat failure (LP: #496144)
  * UpdateManager/Core/MyCache.py:
    - do not crash if the lock can not be released (LP: #410574)
  * UpdateManager/SafeGConfClient.py
    - implement gconfclient that does not crash if gconf is not 
      working (LP: #261471)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 12 Jan 2010 18:15:52 +0100
