@@ -13,6 +13,8 @@ update-manager (1:0.132) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeCache.py:
     - when showing the demoted packages, skip packages that
       are automatic installed
+  * DistUpgrade/DistUpgradeView.py, DistUpgrade/DistUpgradeView{Gtk,KDE}.py:
+    - show only non auto-installed removals bold
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 28 Jan 2010 17:34:37 +0100
 
